WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142797
Cannot invoke action menus anymore
https://bugs.webkit.org/show_bug.cgi?id=142797
Summary
Cannot invoke action menus anymore
Tim Horton
Reported
2015-03-17 15:29:01 PDT
Cannot invoke action menus anymore
Attachments
Patch
(7.63 KB, patch)
2015-03-17 15:29 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-03-17 15:29:24 PDT
Created
attachment 248875
[details]
Patch
WebKit Commit Bot
Comment 2
2015-03-17 15:31:19 PDT
Attachment 248875
[details]
did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:1180: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:1192: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:1196: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:1216: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:1228: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/mac/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 8 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2015-03-17 15:50:08 PDT
http://trac.webkit.org/changeset/181668
Tim Horton
Comment 4
2015-03-17 17:42:25 PDT
Build fix for iOS in
http://trac.webkit.org/changeset/181674
Tim Horton
Comment 5
2015-03-17 18:47:11 PDT
And a respondsToSelector check
http://trac.webkit.org/changeset/181679
Alexey Proskuryakov
Comment 6
2015-03-18 10:33:07 PDT
This broke an API test on Mavericks (still broken):
https://build.webkit.org/builders/Apple%20Mavericks%20Debug%20WK2%20%28Tests%29/builds/10283/steps/run-api-tests/logs/stdio
2015-03-18 10:09:49.214 TestWebKitAPI[58026:d07] +[NSMenu menuTypeForEvent:]: unrecognized selector sent to class 0x7fff7f0d0898 2015-03-18 10:09:49.214 TestWebKitAPI[58026:d07] ( 0 CoreFoundation 0x00007fff8cd6725c __exceptionPreprocess + 172 1 libobjc.A.dylib 0x00007fff9818ce75 objc_exception_throw + 43 2 CoreFoundation 0x00007fff8cd6a02d +[NSObject(NSObject) doesNotRecognizeSelector:] + 205 3 CoreFoundation 0x00007fff8ccc5272 ___forwarding___ + 1010 4 CoreFoundation 0x00007fff8ccc4df8 _CF_forwarding_prep_0 + 120 5 WebKit 0x00000001083088af -[WKView rightMouseDown:] + 495 6 TestWebKitAPI 0x0000000105232009 _ZN13TestWebKitAPI15PlatformWebView18simulateRightClickEjj + 297 7 TestWebKitAPI 0x00000001051d514a _ZN13TestWebKitAPI36WebKit2_HitTestResultNodeHandle_Test8TestBodyEv + 378 8 TestWebKitAPI 0x000000010534aada _ZN7testing4Test3RunEv + 154 9 TestWebKitAPI 0x000000010534b3bd _ZN7testing8internal12TestInfoImpl3RunEv + 189 10 TestWebKitAPI 0x000000010534bf6d _ZN7testing8TestCase3RunEv + 205 11 TestWebKitAPI 0x0000000105351eb7 _ZN7testing8internal12UnitTestImpl11RunAllTestsEv + 935 12 TestWebKitAPI 0x0000000105351b09 _ZN7testing8UnitTest3RunEv + 25 13 TestWebKitAPI 0x00000001052cc3b1 _ZN13TestWebKitAPI15TestsController3runEiPPc + 177 14 TestWebKitAPI 0x0000000105341584 main + 164 15 libdyld.dylib 0x00007fff9025c5fd start + 1 )
Tim Horton
Comment 7
2015-03-18 11:41:45 PDT
One more respondsToSelector:
http://trac.webkit.org/changeset/181705
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug