Cannot invoke action menus anymore https://bugs.webkit.org/show_bug.cgi?id=142797 <rdar://problem/20032670>

Reviewed by Beth Dakin.

* UIProcess/API/mac/WKView.mm:
Don't process mouse events that would make an action menu; call super
and let AppKit take care of it. We have to duplicate the macro so that
we can avoid calling super for the internal-only methods.
Also, otherMouseMoved is simply not a thing, so remove it.

* WebView/WebHTMLView.mm:
(-[WebHTMLView otherMouseDown:]):
Don't override otherMouseDown: if the event would make an action menu.

* platform/spi/mac/NSMenuSPI.h:
Add additional NSMenu SPI.


Canonical link: https://commits.webkit.org/160823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181668 268f45cc-cd09-0410-ab3c-d52691b4dbfc