Source/WebCore/platform/spi/mac/NSMenuSPI.h
@@ -27,6 +27,16 @@
 
 // FIXME: We should just include the appropriate internal headers.
 
+typedef NS_ENUM(NSInteger, NSMenuType) {
+    NSMenuTypeNone = 0,
+    NSMenuTypeContextMenu,
+    NSMenuTypeActionMenu,
+};
+
+@interface NSMenu (Private)
++ (NSMenuType)menuTypeForEvent:(NSEvent *)event;
+@end
+
 @interface NSMenuItem (Private)
 + (QLPreviewMenuItem *)standardQuickLookMenuItem;
 @end
